--- a/talks.Rmd
+++ b/talks.Rmd
@@ -1,6 +1,9 @@
 ---
   title: "Talk Schedule"
 ---
+Link to Hadley Wickham's slides coming soon!  Hadley is Chief Scientist at RStudio, a member of the R Foundation, and Adjunct Professor at Stanford University and the University of Auckland.
+![](Hadley_Wickham_Flyer.png){ width=65% }
+
 Link to JJ Allaire's slides coming soon!  JJ is the Founder and CEO of RStudio and the author of the RStudio IDE.
 ![](JJ_Allaire_Flyer.png){ width=65% }
   
@@ -10,5 +13,5 @@ Link to Lee Wilkinson's slides coming soon!  Lee is perhaps most well-known as t
 [Link to Joe Rickert's slides](https://github.com/joseph-rickert/Stanford_Talk_12-5-17).  Joe is the R Community Ambassador.
 ![](Joseph_Rickert_Flyer.png){ width=65% }
 
-[Link to Norm Matloff's slides](http://heather.cs.ucdavis.edu/StanfordR.pdf).  Norm is the well-known author of the book "The Art of R Programming".
+[Link to Norm Matloff's slides](http://heather.cs.ucdavis.edu/StanfordR.pdf).  Norm is professor of computer science at the University of California at Davis and author of the books "The Art of R Programming" and "Statistical Regression and Classification: From Linear Models to Machine Learning".
 ![](Norm_Matloff_Flyer.png){ width=65% }
